@@ -108,6 +108,7 @@ src/protocols/toc/toc.c
 src/protocols/trepia/trepia.c
 src/protocols/yahoo/yahoo.c
 src/protocols/yahoo/yahoo_filexfer.c
+src/protocols/yahoo/yahoo_profile.c
 src/protocols/yahoo/yahoochat.c
 src/protocols/zephyr/zephyr.c
 src/proxy.c
